# genai_project

./: .gitignore  README.md  imagic.md  proposal.md  pyproject.toml  requirements.txt
docs/source/: conf.py
genai-project/: .gitignore  README.md
genai-project/docs/source/: index.rst
genai-project/src/genai_project/: __main__.py  settings.py
notebooks/: Test_LoRA_implementation_Ethan.ipynb  Test_maxime.ipynb  Untitled8.ipynb  projet_gen_ai.ipynb  stable_diffusion.ipynb  test.ipynb
notebooks/lora_car_output/: README.md
notebooks/lora_car_output/checkpoint-100/: adapter_config.json  adapter_model.safetensors
src/genai_project/: __init__.py
src/genai_project/model/efficient_unet/: efficient_unet.py
src/genai_project/model/imagen/: __init__.py  frozen_text_encoder.py  imagen.py  super_resolution_diffusion_model.py  text_to_image_diffusion_model.py
