[project]
dynamic = ["dependencies"]
name = "genai_project"
version = "0.0.1"
authors = [
  {name = "Maxime Cabrit"},
  {name = "Antoine Charlet"},
  {name = "Robin Meneust"},
  {name = "Ethan Pinto"},
]
description = "Image Editing with Stable Diffusion and Cross-attention Control"
readme = "README.md"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | venv
  | build
  | dist
  | conf
)/
'''